--- a/client/src/styles/ProductCategories.css
+++ b/client/src/styles/ProductCategories.css
@@ -129,6 +129,7 @@
   margin-bottom: 0.5rem;
   color: var(--light-text);
   text-align: center;
+  margin-left: 53%;
 }
 
 /* Mot "Catégories" en bleu */
